# quadcopter_esp32

./: .gitignore  .gitmodules  CMakeLists.txt  generic-gcc-avr.cmake  jenkinsfile  sdkconfig  sdkconfig.old
quadcopter/application_code/: BLDC_fake.hpp  CMakeLists.txt  PID_Controller.hpp  application_code.cpp  application_code.hpp  drone_altitude_controller.cpp  drone_altitude_controller.hpp  drone_control.cpp  drone_control.hpp  drone_stabilze_controller.cpp  drone_stabilze_controller.hpp  test_controller.cpp  test_controller.hpp
quadcopter/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
quadcopter/pc/: CMakeLists.txt  main.cpp
quadcopter/simulation/: CMakeLists.txt  main.cpp
quadcopter/simulation/quadcopter_model/: BLDC.cpp  BLDC.hpp  CMakeLists.txt  quadcopter_simulation.cpp  quadcopter_simulation.hpp
quadcopter/test/: CMakeLists.txt  file.cpp  file.hpp
simulation_tests/: run_single_simulation.py  start_simulations.py  staus_handling.py
simulation_tests/test_first_order_system/: ids_to_log.txt  reference_file.txt  simulation_story.txt  start_test.py  tester.m
simulation_tests/test_first_order_system/tmp/: output_file.txt
simulation_tests/test_somname/: configuration.conf  ids_to_log.txt  python.m  reference_file.txt  simulation_story.txt  tester.m
simulation_tests/test_somname/tmp/: output_file.txt
simulation_tests/test_somname2/: ids_to_log.txt  reference_file.txt  simulation_story.txt
simulation_tests/test_somname2/tmp/: output_file.txt
